[package]
name = "transactor"
default-run = "transactor"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "transactor"
path = "src/main.rs"

[[bin]]
name = "transactor_grpc"
path = "src/grpc.rs"

[dependencies]
csv = "1.1"
serde = { version = "1", features = ["derive"] }
tonic = "0.7"
prost = "0.10"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }

[build-dependencies]
tonic-build = "0.7"