[package]
name = "transactor"
default-run = "transactor"
version = "0.1.0"
edition = "2021"

[dependencies]
csv = "1.1"
rust_decimal = { version = "1.25", features = ["serde-with-str"] }
serde = { version = "1", features = ["derive"] }
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }